--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,6 +4,7 @@
 resources:
 - bases/infrastructure.cluster.x-k8s.io_jujuclusters.yaml
 - bases/infrastructure.cluster.x-k8s.io_jujumachines.yaml
+- bases/infrastructure.cluster.x-k8s.io_jujuconfigurations.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -11,12 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_jujuclusters.yaml
 #- patches/webhook_in_jujumachines.yaml
+#- patches/webhook_in_jujuconfigurations.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_jujuclusters.yaml
 #- patches/cainjection_in_jujumachines.yaml
+#- patches/cainjection_in_jujuconfigurations.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
